--- a/contacto.html
+++ b/contacto.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="/Curriculum/Style.css" />
+    <title>Contacto</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="Style.css">
   </head>
   <body>
     <header>
@@ -19,20 +20,30 @@
       </ul>
     </nav>
 
-    <section id="contacto">
-      <h2>Contacto</h2>
-      <form>
-        <label for="nombre">Nombre; </label><br />
-        <input type="text" name="nombre" id="nombre" /><br /><br />
+    <div class="container mt-5">
+        <section id="contacto" class="p-4 shadow-sm rounded">
+          <h2 class="text-primary border-bottom border-primary pb-2">Contacto</h2>
+          <form>
+            <div class="mb-3">
+                <label for="nombre" class="form-label">Nombre:</label>
+                <input type="text" name="nombre" id="nombre" class="form-control" />
+            </div>
 
-        <label for="correo">Correo:</label><br />
-        <input type="email" name="correo" id="correo" /><br /><br />
+            <div class="mb-3">
+                <label for="correo" class="form-label">Correo:</label>
+                <input type="email" name="correo" id="correo" class="form-control" />
+            </div>
 
-        <label for="correo">Correo:</label><br />
-        <textarea name="mensaje" id="mensaje" rows="4"></textarea><br /><br />
+            <div class="mb-3">
+                <label for="mensaje" class="form-label">Mensaje:</label>
+                <textarea name="mensaje" id="mensaje" rows="4" class="form-control"></textarea>
+            </div>
+            
+            <button type="submit" class="btn btn-primary">Enviar</button>
+          </form>
+        </section>
+    </div>
 
-        <button type="submit">Enviar</button>
-      </form>
-    </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eOzrphuqPVX" crossorigin="anonymous"></script>
   </body>
 </html>
