--- a/main.html
+++ b/main.html
@@ -1,58 +1,61 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saul Espinoza Rivera</title>
-    <link rel="stylesheet" href="/Curriculum/Style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
     <header>
         <h1>Saul Filiberto Espinoza Rivera</h1>
-        <p class = "muted">Ingenieria en Sistemas de Información</p>
+        <p class="muted">Ingenieria en Sistemas de Información</p>
     </header>
+
     <nav>
       <ul>
           <li><a href="main.html">Inicio</a></li>
           <li><a href="galeria.html">Galeria</a></li>
           <li><a href="contacto.html">Contacto</a></li>
-
     </ul>
     </nav>
 
-    <section id="inicio">
-        <h2>Sobre mi</h2>
-        <p>Hola, soy un estudiante de ingenieria en sistemas de informacion, mi nombre es Saul Espinoza y actualmente estoy cursando el 9no semestre.</p>
-        <h3>Mis pasatiempos</h3>
-        <ul>
-            <li>Leer manhwas/mangas</li>
-            <li>Escuchar historias de terror</li>
-            <li>Ver peliculas</li>
-        </ul>
-        <figure>
-            <img src="https://cdn-icons-png.flaticon.com/512/3271/3271001.png" alt="Describe la imagen">
-            <figcaption>Yo</figcaption>
-        </figure>
-    </section>
+    <div class="container mt-5">
+        <section id="inicio" class="p-4 shadow-lg mb-4 rounded">
+            <h2 class="text-primary border-bottom border-primary pb-2">Sobre mi</h2>
+            <div class="row align-items-center">
+                <div class="col-md-8">
+                    <p>Hola, soy un estudiante de ingenieria en sistemas de informacion, mi nombre es Saul Espinoza y actualmente estoy cursando el 9no semestre.</p>
+                    
+                    <h3 class="mt-4">Mis pasatiempos</h3>
+                    <ul class="list-unstyled">
+                        <li><span class="badge bg-info text-dark">Leer manhwas/mangas</span></li>
+                        <li><span class="badge bg-info text-dark">Escuchar historias de terror</span></li>
+                        <li><span class="badge bg-info text-dark">Ver peliculas</span></li>
+                    </ul>
+                </div>
+                <div class="col-md-4 text-center">
+                    <figure class="figure">
+                        <img src="https://cdn-icons-png.flaticon.com/512/3271/3271001.png" class="img-fluid rounded" alt="Ícono representativo de Saul Espinoza">
+                        <figcaption class="figure-caption text-center text-muted">Yo</figcaption>
+                    </figure>
+                </div>
+            </div>
+        </section>
+    </div>
 
-    
-
-   
     <footer>
         <p>
             <div>Saul Espinoza 01/11/2025 </div>
             <div>Modificaciones: 02/09/2025</div>
             <div>Modificaciones:19/09/2025</div>
-            <div> 
-                <p>Modificaciones agregadas:</p>
-                <ul>
-                    <li>Efecto Glass en el menu de navegación</li>
-                    <li>Text-Shadow en titulos</li>
-                    <li>Animacion en botones</li>
-                    <li>Transiciones suaves</li>
-                </ul>
-            </div>
+            <div>Modificaciones: 01/10/2025</div>
+            <div>Se agrego el elemento bootstrap</div>
+
         </p>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eOzrphuqPVX" crossorigin="anonymous"></script>
 </body>
 </html>
