--- a/galeria.html
+++ b/galeria.html
@@ -17,17 +17,14 @@
       <ul>
           <li><a href="main.html">Inicio</a></li>
           <li><a href="galeria.html">Galeria</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
     </ul>
     </nav>
 
     <div class="container mt-5">
         <section id="galeria" class="p-4 shadow-sm rounded">
+            <hr class="section-divider">
             <h2 class="text-primary border-bottom border-primary pb-2">Herramientas utilizadas</h2>
-            
-            <button type="button" class="btn btn-primary mb-4" data-bs-toggle="modal" data-bs-target="#toolsModal" aria-label="Ver más detalles sobre las herramientas y tecnologías.">
-              Ver Detalle de Tecnologías
-            </button>
+                    <!-- Sección de herramientas que son utilizadas-->
 
             <div class="row g-4">
                 <div class="col-sm-6 col-md-4">
@@ -77,8 +74,50 @@
                     </article>
                 </div>
             </div>
+        <!-- Sección de habilidades mostrada por porcentajes -->
+            <hr class="section-divider">
+                <h2 class="text-primary border-bottom border-primary pb-2">Habilidades</h2>
+                <div class="skills">
+                    <div class="skill">
+                        <p>HTML</p>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 80%;"></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <p>CSS</p>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 70%;"></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <p>JavaScript</p>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 65%;"></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <p>Java</p>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 75%;"></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <p>Python</p>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 70%;"></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <p>MySQL</p>
+                        <div class="progress-bar">
+                            <div class="progress" style="width: 60%;"></div>
+                        </div>
+                    </div>
+                </div>
+                        <!-- Tabla de intereses -->
 
-
+            <hr class="section-divider">
             <h3 class="mt-5 text-primary">Tabla de intereses</h3>
             <table class="table table-striped table-hover mt-3">
                 <thead>
@@ -96,25 +135,5 @@
             </table>
         </section>
     </div>
-
-    <div class="modal fade" id="toolsModal" tabindex="-1" aria-labelledby="toolsModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header bg-primary text-white">
-            <h5 class="modal-title" id="toolsModalLabel">Detalles Adicionales de Herramientas</h5>
-            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Cerrar ventana emergente"></button>
-          </div>
-          <div class="modal-body">
-            <p>Estas herramientas son clave en mi formación. El ecosistema **HTML/CSS/JS** me permite crear interfaces de usuario dinámicas y responsivas, complementado por **Java** y **Python** para el desarrollo de lógica de negocio y aplicaciones robustas.</p>
-            <p>La gestión de datos se realiza con **MySQL**, asegurando la persistencia y la integridad de la información.</p>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Entendido</button>
-          </div>
-        </div>
-      </div>
-    </div>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eOzrphuqPVX" crossorigin="anonymous"></script>
 </body>
 </html>
