--- a/main.html
+++ b/main.html
@@ -17,45 +17,54 @@
       <ul>
           <li><a href="main.html">Inicio</a></li>
           <li><a href="galeria.html">Galeria</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
     </ul>
     </nav>
 
     <div class="container mt-5">
         <section id="inicio" class="p-4 shadow-lg mb-4 rounded">
-            <h2 class="text-primary border-bottom border-primary pb-2">Sobre mi</h2>
-            <div class="row align-items-center">
-                <div class="col-md-8">
-                    <p>Hola, soy un estudiante de ingenieria en sistemas de informacion, mi nombre es Saul Espinoza y actualmente estoy cursando el 9no semestre.</p>
-                    
-                    <h3 class="mt-4">Mis pasatiempos</h3>
+    <div class="col-md-4 text-center">
+                <figure class="figure">
+                    <img src="imagenes/0c293724-94f7-4536-9d07-3ac902c03dd0.jpg" class="profile-pic" alt="Foto de perfil de Saul Espinoza">
+                    <figcaption class="figure-caption text-center text-muted">Saul Espinoza</figcaption>
+                </figure>
+            </div>
+            <hr class="section-divider">
+            <h2 class="text-primary border-bottom border-primary pb-2">Sobre mí</h2>
+            <div class="two-columns">
+                <div class="personal-info">
+                    <h3>Información Personal</h3>
+                    <p><strong>Nombre:</strong> Saul Filiberto Espinoza Rivera</p>
+                    <p><strong>Carrera:</strong> Ingeniería en Sistemas de Información</p>
+                    <p><strong>Semestre:</strong> 9no</p>
+                    <h4>Mis pasatiempos</h4>
                     <ul class="list-unstyled">
-                        <li><span class="badge bg-info text-dark">Leer manhwas/mangas</span></li>
+                        <li><span class="badge bg-info text-dark">Leer manhwas/mangas</span></li> 
                         <li><span class="badge bg-info text-dark">Escuchar historias de terror</span></li>
-                        <li><span class="badge bg-info text-dark">Ver peliculas</span></li>
+                        <li><span class="badge bg-info text-dark">Ver películas</span></li>
                     </ul>
                 </div>
-                <div class="col-md-4 text-center">
-                    <figure class="figure">
-                        <img src="https://cdn-icons-png.flaticon.com/512/3271/3271001.png" class="img-fluid rounded" alt="Ícono representativo de Saul Espinoza">
-                        <figcaption class="figure-caption text-center text-muted">Yo</figcaption>
-                    </figure>
+                <div class="experience-education">
+                    <h3>Formación y Experiencia</h3>
+                    <p><strong>Universidad:</strong> Universidad de Sonora</p>
+                    <p><strong>Proyectos destacados:</strong> Desarrollo de aplicaciones web con HTML, CSS, JavaScript; proyectos backend con Java y Python.</p>
+                    <p><strong>Habilidades técnicas:</strong> MySQL, desarrollo frontend y backend.</p>
                 </div>
             </div>
         </section>
     </div>
 
-    <footer>
-        <p>
-            <div>Saul Espinoza 01/11/2025 </div>
-            <div>Modificaciones: 02/09/2025</div>
-            <div>Modificaciones:19/09/2025</div>
-            <div>Modificaciones: 01/10/2025</div>
-            <div>Se agrego el elemento bootstrap</div>
-
-        </p>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eOzrphuqPVX" crossorigin="anonymous"></script>
+<footer>
+    <p>Contáctame:</p>
+    <div class="social-links">
+        <a href="https://www.linkedin.com/in/saul-espinoza-rivera-7715061ab" target="_blank" class="social-icon" aria-label="LinkedIn">
+            <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn" class="social-img">
+        </a>
+        <a href="https://github.com/saulfer1109" target="_blank" class="social-icon" aria-label="GitHub">
+            <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub" class="social-img">
+        </a>
+    </div>
+    <p>Email: <a href="mailto:a221210831@unison.mx">a221210831@unison.mx</a> | Tel: <a href="tel:+1234567890">+123 456 7890</a></p>
+    <a href="#download-cv" class="btn btn-primary download-cv">Descargar CV</a>
+</footer>
 </body>
 </html>
