--- a/galeria.html
+++ b/galeria.html
@@ -17,6 +17,7 @@
       <ul>
           <li><a href="main.html">Inicio</a></li>
           <li><a href="galeria.html">Galeria</a></li>
+          <li><a href="skillmap.html">Mapa de habilidades</a></li>
     </ul>
     </nav>
 
